Classloader Performance Improvements #1
- updated POM